--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+     "vercel-build": "npm install --legacy-peer-deps && npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
