--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-     "vercel-build": "npm install --legacy-peer-deps && npm run build",
+    "netlify-build": "npm install --legacy-peer-deps && npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-event-listener": "^0.6.6",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
     "react-swipeable-views": "^0.14.0",
