--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@shadcn/ui": "^0.0.4",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.37",
+    "@stianlarsen/border-beam": "^1.0.13",
     "add": "^2.0.6",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "dialog": "^0.3.1",
     "firebase": "^11.0.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.454.0",
@@ -36,7 +37,6 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
-    "react-swipeable-views": "^0.14.0",
     "shadcn-ui": "^0.2.3",
     "spline": "^0.0.0",
     "styled-components": "^6.1.13",
