--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my_portfolio",
-  "homepage": "https://afganportofolio.my.id",
+  "homepage": "https://afganworks.vercel.app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
